# Second level CMakeLists.txt: register individual tests

include(GoogleTest)

if(WIN32)
  enable_language(RC)
endif()

# Add tests: specify add_executable and target_link_libraries

function(add_as_invoker_manifest target)
  if(WIN32)
    target_sources(${target} PRIVATE gtest_as_invoker.rc)
  endif()
endfunction()

# test_common_DerivedQuantityReportRegistry.cpp
add_executable(common_DerivedQuantityReportRegistry
  test_common_DerivedQuantityReportRegistry.cpp
)
add_as_invoker_manifest(common_DerivedQuantityReportRegistry)
target_link_libraries(common_DerivedQuantityReportRegistry
  gtest_main
  fims_test
)
gtest_discover_tests(common_DerivedQuantityReportRegistry)

# test_common_DerivedQuantityUncertainty.cpp
add_executable(common_DerivedQuantityUncertainty
  test_common_DerivedQuantityUncertainty.cpp
)
add_as_invoker_manifest(common_DerivedQuantityUncertainty)
target_link_libraries(common_DerivedQuantityUncertainty
  gtest_main
  fims_test
)
gtest_discover_tests(common_DerivedQuantityUncertainty)

# test_TMB_FixedEffectADReportUncertaintyAdapter.cpp
add_executable(TMB_FixedEffectADReportUncertaintyAdapter
  test_TMB_FixedEffectADReportUncertaintyAdapter.cpp
)
add_as_invoker_manifest(TMB_FixedEffectADReportUncertaintyAdapter)
target_link_libraries(TMB_FixedEffectADReportUncertaintyAdapter
  gtest_main
  fims_test
)
gtest_discover_tests(TMB_FixedEffectADReportUncertaintyAdapter)

# test_fimsMath_fimsMath_exp.cpp
add_executable(fimsMath_fimsMath_exp
  test_fimsMath_fimsMath_exp.cpp
)
add_as_invoker_manifest(fimsMath_fimsMath_exp)
target_link_libraries(fimsMath_fimsMath_exp
  gtest_main
  fims_test
)
gtest_discover_tests(fimsMath_fimsMath_exp)

# test_fimsMath_fimsMath_log.cpp
add_executable(fimsMath_fimsMath_log
  test_fimsMath_fimsMath_log.cpp
)
add_as_invoker_manifest(fimsMath_fimsMath_log)
target_link_libraries(fimsMath_fimsMath_log
  gtest_main
  fims_test
)
gtest_discover_tests(fimsMath_fimsMath_log)

# test_fimsMath_fimsMath_logistic.cpp
add_executable(fimsMath_fimsMath_logistic
  test_fimsMath_fimsMath_logistic.cpp
)
add_as_invoker_manifest(fimsMath_fimsMath_logistic)
target_link_libraries(fimsMath_fimsMath_logistic
  gtest_main
  fims_test
)
gtest_discover_tests(fimsMath_fimsMath_logistic)

# test_fimsMath_fimsMath_doubleLogistic.cpp
add_executable(fimsMath_fimsMath_doubleLogistic
  test_fimsMath_fimsMath_doubleLogistic.cpp
)
add_as_invoker_manifest(fimsMath_fimsMath_doubleLogistic)
target_link_libraries(fimsMath_fimsMath_doubleLogistic
  gtest_main
  fims_test
)
gtest_discover_tests(fimsMath_fimsMath_doubleLogistic)

# test_fimsMath_fimsMath_adFabsMinMax.cpp
add_executable(fimsMath_fimsMath_adFabsMinMax
  test_fimsMath_fimsMath_adFabsMinMax.cpp
)
add_as_invoker_manifest(fimsMath_fimsMath_adFabsMinMax)
target_link_libraries(fimsMath_fimsMath_adFabsMinMax
  gtest_main
  fims_test
)
gtest_discover_tests(fimsMath_fimsMath_adFabsMinMax)

# test_fimsMath_fimsMath_logit.cpp
add_executable(fimsMath_fimsMath_logit
  test_fimsMath_fimsMath_logit.cpp
)
add_as_invoker_manifest(fimsMath_fimsMath_logit)
target_link_libraries(fimsMath_fimsMath_logit
  gtest_main
  fims_test
)
gtest_discover_tests(fimsMath_fimsMath_logit)

# test_growth_EWAAGrowth_evaluate.cpp
add_executable(growth_EWAAGrowth_evaluate
  test_growth_EWAAGrowth_evaluate.cpp
)
add_as_invoker_manifest(growth_EWAAGrowth_evaluate)
target_link_libraries(growth_EWAAGrowth_evaluate
  gtest_main
  fims_test
)
gtest_discover_tests(growth_EWAAGrowth_evaluate)

# test_information_Information_SetupPriors.cpp
add_executable(information_Information_SetupPriors
  test_information_Information_SetupPriors.cpp
)
add_as_invoker_manifest(information_Information_SetupPriors)
target_link_libraries(information_Information_SetupPriors
  gtest_main
  fims_test
)
gtest_discover_tests(information_Information_SetupPriors)

# test_information_Information_SetupRandomEffects.cpp
add_executable(information_Information_SetupRandomEffects
  test_information_Information_SetupRandomEffects.cpp
)
add_as_invoker_manifest(information_Information_SetupRandomEffects)
target_link_libraries(information_Information_SetupRandomEffects
  gtest_main
  fims_test
)
gtest_discover_tests(information_Information_SetupRandomEffects)

# test_srBevertonHolt_SRBevertonHolt_evaluateMean.cpp
add_executable(srBevertonHolt_SRBevertonHolt_evaluateMean
  test_srBevertonHolt_SRBevertonHolt_evaluateMean.cpp
)
add_as_invoker_manifest(srBevertonHolt_SRBevertonHolt_evaluateMean)
target_link_libraries(srBevertonHolt_SRBevertonHolt_evaluateMean
  gtest_main
  fims_test
)
gtest_discover_tests(srBevertonHolt_SRBevertonHolt_evaluateMean)

# test_maturityLogistic_LogisticMaturity_evaluate.cpp
add_executable(maturityLogistic_LogisticMaturity_evaluate
  test_maturityLogistic_LogisticMaturity_evaluate.cpp
)
add_as_invoker_manifest(maturityLogistic_LogisticMaturity_evaluate)
target_link_libraries(maturityLogistic_LogisticMaturity_evaluate
  gtest_main
  fims_test
)
gtest_discover_tests(maturityLogistic_LogisticMaturity_evaluate)

# test_recruitmentBase_SRBevertonHolt_PrepareConstrainedDeviations.cpp
add_executable(recruitmentBase_SRBevertonHolt_PrepareConstrainedDeviations
  test_recruitmentBase_SRBevertonHolt_PrepareConstrainedDeviations.cpp
)
add_as_invoker_manifest(recruitmentBase_SRBevertonHolt_PrepareConstrainedDeviations)
target_link_libraries(recruitmentBase_SRBevertonHolt_PrepareConstrainedDeviations
  gtest_main
  fims_test
)
gtest_discover_tests(recruitmentBase_SRBevertonHolt_PrepareConstrainedDeviations)

# test_recruitmentProcess_SRBevertonHolt_evaluateProcess.cpp
add_executable(recruitmentProcess_SRBevertonHolt_evaluateProcess
  test_recruitmentProcess_SRBevertonHolt_evaluateProcess.cpp
)
add_as_invoker_manifest(recruitmentProcess_SRBevertonHolt_evaluateProcess)
target_link_libraries(recruitmentProcess_SRBevertonHolt_evaluateProcess
  gtest_main
  fims_test
)
gtest_discover_tests(recruitmentProcess_SRBevertonHolt_evaluateProcess)

# test_fleet_Fleet_InitializePrepare.cpp
add_executable(fleet_Fleet_InitializePrepare
  test_fleet_Fleet_InitializePrepare.cpp
)
add_as_invoker_manifest(fleet_Fleet_InitializePrepare)
target_link_libraries(fleet_Fleet_InitializePrepare
  gtest_main
  fims_test
)
gtest_discover_tests(fleet_Fleet_InitializePrepare)

# test_population_Population_InitializePrepare.cpp
add_executable(population_Population_InitializePrepare
  test_population_Population_InitializePrepare.cpp
)
add_as_invoker_manifest(population_Population_InitializePrepare)
target_link_libraries(population_Population_InitializePrepare
  gtest_main
  fims_test
)
gtest_discover_tests(population_Population_InitializePrepare)

# test_population_CatchAtAge_CalculateBiomass.cpp
add_executable(population_CatchAtAge_CalculateBiomass
  test_population_CatchAtAge_CalculateBiomass.cpp
)
add_as_invoker_manifest(population_CatchAtAge_CalculateBiomass)
target_link_libraries(population_CatchAtAge_CalculateBiomass
  gtest_main
  fims_test
)
gtest_discover_tests(population_CatchAtAge_CalculateBiomass)

# test_population_CatchAtAge_CalculateLandings.cpp
add_executable(population_CatchAtAge_CalculateLandings
  test_population_CatchAtAge_CalculateLandings.cpp
)
add_as_invoker_manifest(population_CatchAtAge_CalculateLandings)
target_link_libraries(population_CatchAtAge_CalculateLandings
  gtest_main
  fims_test
)
gtest_discover_tests(population_CatchAtAge_CalculateLandings)

# test_population_CatchAtAge_CalculateLandingsNumbersAA.cpp
add_executable(population_CatchAtAge_CalculateLandingsNumbersAA
  test_population_CatchAtAge_CalculateLandingsNumbersAA.cpp
)
add_as_invoker_manifest(population_CatchAtAge_CalculateLandingsNumbersAA)
target_link_libraries(population_CatchAtAge_CalculateLandingsNumbersAA
  gtest_main
  fims_test
)
gtest_discover_tests(population_CatchAtAge_CalculateLandingsNumbersAA)

# test_population_CatchAtAge_CalculateIndex.cpp
add_executable(population_CatchAtAge_CalculateIndex
  test_population_CatchAtAge_CalculateIndex.cpp
)
add_as_invoker_manifest(population_CatchAtAge_CalculateIndex)
target_link_libraries(population_CatchAtAge_CalculateIndex
  gtest_main
  fims_test
)
gtest_discover_tests(population_CatchAtAge_CalculateIndex)

# test_population_CatchAtAge_CalculateMaturityAA.cpp
add_executable(population_CatchAtAge_CalculateMaturityAA
  test_population_CatchAtAge_CalculateMaturityAA.cpp
)
add_as_invoker_manifest(population_CatchAtAge_CalculateMaturityAA)
target_link_libraries(population_CatchAtAge_CalculateMaturityAA
  gtest_main
  fims_test
)
gtest_discover_tests(population_CatchAtAge_CalculateMaturityAA)

# test_population_CatchAtAge_CalculateNumbersAA.cpp
add_executable(population_CatchAtAge_CalculateNumbersAA
  test_population_CatchAtAge_CalculateNumbersAA.cpp
)
add_as_invoker_manifest(population_CatchAtAge_CalculateNumbersAA)
target_link_libraries(population_CatchAtAge_CalculateNumbersAA
  gtest_main
  fims_test
)
gtest_discover_tests(population_CatchAtAge_CalculateNumbersAA)

# test_population_CatchAtAge_CalculateRecruitment.cpp
add_executable(population_CatchAtAge_CalculateRecruitment
  test_population_CatchAtAge_CalculateRecruitment.cpp
)
add_as_invoker_manifest(population_CatchAtAge_CalculateRecruitment)
target_link_libraries(population_CatchAtAge_CalculateRecruitment
  gtest_main
  fims_test
)
gtest_discover_tests(population_CatchAtAge_CalculateRecruitment)

# test_population_CatchAtAge_CalculateUnfishedInitial.cpp
add_executable(population_CatchAtAge_CalculateUnfishedInitial
  test_population_CatchAtAge_CalculateUnfishedInitial.cpp
)
add_as_invoker_manifest(population_CatchAtAge_CalculateUnfishedInitial)
target_link_libraries(population_CatchAtAge_CalculateUnfishedInitial
  gtest_main
  fims_test
)
gtest_discover_tests(population_CatchAtAge_CalculateUnfishedInitial)

# test_Logistic_LogisticSelectivity_Evaluate.cpp
add_executable(Logistic_LogisticSelectivity_Evaluate
  test_Logistic_LogisticSelectivity_Evaluate.cpp
)
add_as_invoker_manifest(Logistic_LogisticSelectivity_Evaluate)
target_link_libraries(Logistic_LogisticSelectivity_Evaluate
  gtest_main
  fims_test
)
gtest_discover_tests(Logistic_LogisticSelectivity_Evaluate)

# test_DoubleLogistic_DoubleLogisticSelectivity_Evaluate.cpp
add_executable(DoubleLogistic_DoubleLogisticSelectivity_Evaluate
  test_DoubleLogistic_DoubleLogisticSelectivity_Evaluate.cpp
)
add_as_invoker_manifest(DoubleLogistic_DoubleLogisticSelectivity_Evaluate)
target_link_libraries(DoubleLogistic_DoubleLogisticSelectivity_Evaluate
  gtest_main
  fims_test
)
gtest_discover_tests(DoubleLogistic_DoubleLogisticSelectivity_Evaluate)

# test_FIMSJson_JsonParser_Parse.cpp
add_executable(FIMSJson_JsonParser_Parse
  test_FIMSJson_JsonParser_Parse.cpp
)
add_as_invoker_manifest(FIMSJson_JsonParser_Parse)
target_link_libraries(FIMSJson_JsonParser_Parse
  gtest_main
  fims_test
)
gtest_discover_tests(FIMSJson_JsonParser_Parse)

# test_FIMSJson_JsonParser_WriteToFile.cpp
add_executable(FIMSJson_JsonParser_WriteToFile
  test_FIMSJson_JsonParser_WriteToFile.cpp
)
add_as_invoker_manifest(FIMSJson_JsonParser_WriteToFile)
target_link_libraries(FIMSJson_JsonParser_WriteToFile
  gtest_main
  fims_test
)
gtest_discover_tests(FIMSJson_JsonParser_WriteToFile)

# test_def_FIMSLog_clear.cpp
add_executable(def_FIMSLog_clear
  test_def_FIMSLog_clear.cpp
)
add_as_invoker_manifest(def_FIMSLog_clear)
target_link_libraries(def_FIMSLog_clear
  gtest_main
  fims_test
)
gtest_discover_tests(def_FIMSLog_clear)
